@@ -17,36 +17,30 @@ namespace Castle.Core.Logging
 	using System;
 
 	/// <summary>
-	/// Summary description for ConsoleFactory.
+	/// NullLogFactory used when logging is turned off.
 	/// </summary>
-	public class ConsoleFactory : ILoggerFactory
+	[Serializable]
+	public class NullLogFactory : AbstractLoggerFactory
 	{
-		public ConsoleFactory()
+		/// <summary>
+		/// Creates an instance of ILogger with the specified name.
+		/// </summary>
+		/// <param name="name">Name.</param>
+		/// <returns></returns>
+		public override ILogger Create(String name)
 		{
+			return NullLogger.Instance;
 		}
 
-		#region ILoggerFactory Members
-
-		public ILogger Create(Type type)
+		/// <summary>
+		/// Creates an instance of ILogger with the specified name and LoggerLevel.
+		/// </summary>
+		/// <param name="name">Name.</param>
+		/// <param name="level">Level.</param>
+		/// <returns></returns>
+		public override ILogger Create(String name, LoggerLevel level)
 		{
-			return new ConsoleLogger(type.FullName);
+			return NullLogger.Instance;
 		}
-
-		public ILogger Create(String name)
-		{
-			return new ConsoleLogger(name);
-		}
-
-		public ILogger Create(Type type, LoggerLevel level)
-		{
-			return new ConsoleLogger(type.Name, level);
-		}
-
-		public ILogger Create(String name, LoggerLevel level)
-		{
-			return new ConsoleLogger(name, level);
-		}
-
-		#endregion
 	}
 }
