@@ -24,21 +24,21 @@ namespace Castle.Core.Logging
 		/// <summary>
 		/// Creates a new logger, getting the logger name from the specified type.
 		/// </summary>
-		ILogger Create( Type type );
+		ILogger Create(Type type);
 
 		/// <summary>
 		/// Creates a new logger.
 		/// </summary>
-		ILogger Create( String name );
+		ILogger Create(String name);
 
 		/// <summary>
 		/// Creates a new logger, getting the logger name from the specified type.
 		/// </summary>
-		ILogger Create( Type type, LoggerLevel level );
+		ILogger Create(Type type, LoggerLevel level);
 
 		/// <summary>
 		/// Creates a new logger.
 		/// </summary>
-		ILogger Create( String name, LoggerLevel level );
+		ILogger Create(String name, LoggerLevel level);
 	}
 }
